turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {

var i:Color = getCouleurSol()

		if (getCouleurSol() == colors[i]) {
			if (rule(i) == 'R') {
				droite()
				avance()
			} else {
				gauche()
				avance()
			}
		}
	
}

def setCouleurSol(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}
